<resources>
    <string name="app_name">NextTask</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button"><![CDATA[Подробнее >]]></string>
    <string name="degree">-2</string>
    <string name="mark">mark</string>
    <string name="status">Ясно</string>
    <string name="someinfo">Какая-то инфо</string>
    <string name="menu">Menu</string>
    <string name="settings">Settings</string>
    <string name="humadity">Влажность</string>
    <string name="first">Main info</string>
    <string name="second">More info</string>
    <string name="some">Some</string>
    <string name="text">Text</string>
    <string name="title_activity_screen">ScreenActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="alerttitle">Enable GPS</string>
    <string name="alert_positive">Enable</string>
    <string name="alert_negative">Cancel</string>
    <string name="alertstart">Permissions not granted!</string>
    <string name="start_activity_ok">Proceed anyway</string>
    <string name="start_activity_cancel">Cancel</string>
    <string name="airStatus">Индекс воздуха</string>
    <string name="air_number">Индекс 41</string>
    <string name="windSpeed">Скорость ветра</string>
    <string name="humadity_number">60%</string>
    <string name="wind_number">30 км/ч</string>
</resources>